--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,62 @@
 <div>
-  <h1 class="text-3xl font-bold underline">{{ title }} app is running</h1>
-  <app-dashboard></app-dashboard>
+  <div class="flex flex-wrap">
+    <section class="relative mx-auto">
+      <nav class="flex justify-between bg-gray-900 text-white w-screen">
+        <div class="px-5 xl:px-12 py-6 flex w-full items-center">
+          <a class="text-3xl font-bold font-heading" href="#">
+            {{ appName }}
+          </a>
+          <ul
+            class="hidden md:flex px-4 mx-auto font-semibold font-heading space-x-12"
+          >
+            <li><a class="hover:text-gray-200" href="#">Dashboard</a></li>
+          </ul>
+          <div class="hidden xl:flex items-center space-x-5 items-center">
+            <a href="#">
+              <svg
+                height="30"
+                width="30"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M21 12L13 12"
+                    stroke="#ffffff"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M18 15L20.913 12.087V12.087C20.961 12.039 20.961 11.961 20.913 11.913V11.913L18 9"
+                    stroke="#ffffff"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M16 5V4.5V4.5C16 3.67157 15.3284 3 14.5 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H14.5C15.3284 21 16 20.3284 16 19.5V19.5V19"
+                    stroke="#ffffff"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </g>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </section>
+  </div>
+  <div class="container mx-auto">
+    <app-dashboard></app-dashboard>
+  </div>
 </div>
