--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,5 +1,17 @@
 <div class="my-8">
   <ul class="flex flex-row flex-wrap">
+    <li>
+      <button
+        class="m-6 flex flex-col justify-center items-center h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+      >
+        <ng-icon name="heroPlusCircle" class="my-2 text-5xl"></ng-icon>
+        <h6
+          class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+        >
+          New Card
+        </h6>
+      </button>
+    </li>
     <li *ngFor="let card of cards">
       <div
         class="m-6 block h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
