--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -36,7 +36,6 @@
   <div
     *ngIf="showNewCardModal"
     class="fixed h-full top-0 w-full flex items-center justify-center p-4 overflow-x-hidden backdrop-blur-sm"
-    (click)="onCancelNewCardButtonClick()"
   >
     <div class="relative w-full max-w-2xl max-h-full">
       <!-- Modal content -->
@@ -53,24 +52,29 @@
             (click)="onCancelNewCardButtonClick()"
             class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
           >
-            <svg
-              aria-hidden="true"
-              class="w-5 h-5"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
-            <span class="sr-only">Close modal</span>
+            <ng-icon class="text-xl" name="heroXMark"></ng-icon>
           </button>
         </div>
         <!-- Modal body -->
-        <div class="p-6 space-y-6"></div>
+        <div class="p-6 space-y-6" class="flex flex-col m-4 p-4">
+          <div class="flex my-2">
+            <label for="title" class="mx-2 w-16">Title</label>
+            <input
+              type="text"
+              class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              id="title"
+              [(ngModel)]="card.title"
+            />
+          </div>
+          <div class="flex my-2">
+            <label for="description" class="mx-2 w-16">Details</label>
+            <textarea
+              class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              id="description"
+              [(ngModel)]="card.description"
+            ></textarea>
+          </div>
+        </div>
         <!-- Modal footer -->
         <div
           class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
