added navigation module

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -35,7 +35,7 @@
 
   <div
     *ngIf="showNewCardModal"
-    class="fixed h-full top-0 w-full flex items-center justify-center p-4 overflow-x-hidden backdrop-blur-sm"
+    class="fixed h-screen top-0 w-full flex items-center justify-center p-4 overflow-x-hidden backdrop-blur-sm"
   >
     <div class="relative w-full max-w-2xl max-h-full">
       <!-- Modal content -->
