--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,1 @@
-<div>
-  <nav class="bg-white border-gray-200 dark:bg-gray-900">
-    <div
-      class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4"
-    >
-      <a href="#" class="flex items-center">
-        <span
-          class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-          >trello-app</span
-        >
-      </a>
-      <div>
-        <a
-          href="#"
-          class="flex items-center justify-center text-sm text-blue-600 dark:text-blue-500 hover:underline"
-        >
-          <ng-icon name="heroArrowLeftOnRectangle" class="text-4xl"></ng-icon>
-          <span class="mx-2 text-xl">Logout</span>
-        </a>
-      </div>
-    </div>
-  </nav>
-  <div class="container mx-auto">
-    <app-dashboard></app-dashboard>
-  </div>
-</div>
+<router-outlet></router-outlet>
