--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,25 @@
-<div class="my-1">
+<nav class="px-2 bg-white border-gray-200 dark:bg-gray-900">
+  <div
+    class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4"
+  >
+    <a href="#" class="flex items-center">
+      <span
+        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        >trello-app</span
+      >
+    </a>
+    <div>
+      <button
+        type="button"
+        (click)="logout()"
+        class="flex items-center justify-center text-sm text-blue-600 dark:text-blue-500 hover:underline"
+      >
+        <ng-icon name="heroArrowLeftOnRectangle" class="text-4xl"></ng-icon>
+        <span class="mx-2 text-xl">Logout</span>
+      </button>
+    </div>
+  </div>
+</nav>
+<div class="container mx-auto my-1">
   <app-cards></app-cards>
 </div>
