--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div
+  class="flex flex-col h-screen content-center items-center align-center justify-center"
+>
+  <p class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">
+    trello-app
+  </p>
+  <button
+    type="button"
+    (click)="login()"
+    class="m-6 h-18 w-32 p-5 border border-blue-200 rounded-lg shadow hover:bg-blue-100 dark:bg-blue-800 dark:border-blue-700 dark:hover:bg-blue-700"
+  >
+    <span class="text-lg font-bold tracking-tight text-blue-900 dark:text-white"
+      >LOGIN</span
+    >
+  </button>
+</div>
