--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,5 +21,10 @@
   </div>
 </nav>
 <div class="container mx-auto my-1">
+  <p
+    class="m-6 text-3xl font-bold tracking-tight text-gray-900 dark:text-white"
+  >
+    Welcome {{ userFullName }}
+  </p>
   <app-cards></app-cards>
 </div>
