save card in trello

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -27,7 +27,7 @@
           {{ card.desc }}
         </p>
         <p class="font-normal text-gray-700 dark:text-gray-400">
-          Created on: {{ card.createdOn | date }}
+          Created on: {{ card.createdAt | date }}
         </p>
       </div>
     </li>
