--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -63,7 +63,7 @@
               type="text"
               class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               id="title"
-              [(ngModel)]="card.name"
+              [(ngModel)]="selectedCard.name"
             />
           </div>
           <div class="flex my-2">
@@ -71,7 +71,7 @@
             <textarea
               class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               id="description"
-              [(ngModel)]="card.desc"
+              [(ngModel)]="selectedCard.desc"
             ></textarea>
           </div>
         </div>
