--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -16,19 +16,23 @@
     </li>
     <li *ngFor="let card of cards">
       <div
-        class="m-6 block h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        class="m-6 flex flex-col justify-between block h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
-        <h5
-          class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-        >
-          {{ card.name | uppercase }}
-        </h5>
-        <p class="font-normal text-gray-700 dark:text-gray-400">
-          {{ card.desc }}
-        </p>
-        <p class="font-normal text-gray-700 dark:text-gray-400">
-          Created on: {{ card.createdAt | date }}
-        </p>
+        <div>
+          <h5
+            class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+          >
+            {{ card.name | uppercase }}
+          </h5>
+          <p class="font-normal text-gray-700 dark:text-gray-400">
+            {{ card.desc }}
+          </p>
+        </div>
+        <div class="flex flex-row justify-end">
+          <p class="font-normal text-xs text-gray-700 dark:text-gray-400">
+            {{ card.createdAt | date }}
+          </p>
+        </div>
       </div>
     </li>
   </ul>
