--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -16,7 +16,8 @@
     </li>
     <li *ngFor="let card of cards">
       <div
-        class="m-6 flex flex-col justify-between block h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        (click)="onCardClick(card)"
+        class="m-6 flex flex-col justify-between cursor-pointer h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
         <div>
           <h5
@@ -81,14 +82,14 @@
         </div>
         <!-- Modal footer -->
         <div
-          class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
+          class="flex p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
         >
           <button
             type="button"
             (click)="saveCard()"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           >
-            Save
+            {{ selectedCard._id ? "Update" : "Save" }}
           </button>
           <button
             type="button"
