--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -82,22 +82,33 @@
         </div>
         <!-- Modal footer -->
         <div
-          class="flex p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
+          class="flex justify-between p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
         >
-          <button
-            type="button"
-            (click)="saveCard()"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
-            {{ selectedCard._id ? "Update" : "Save" }}
-          </button>
-          <button
-            type="button"
-            (click)="onCancelNewCardButtonClick()"
-            class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
-          >
-            Cancel
-          </button>
+          <div>
+            <button
+              type="button"
+              (click)="saveCard()"
+              class="mx-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            >
+              {{ selectedCard._id ? "Update" : "Save" }}
+            </button>
+            <button
+              type="button"
+              (click)="onCancelNewCardButtonClick()"
+              class="mx-2 text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
+            >
+              Cancel
+            </button>
+          </div>
+          <div *ngIf="selectedCard._id">
+            <button
+              type="button"
+              (click)="deleteCard()"
+              class="justify-self-end text-gray-500 bg-white hover:bg-red-100 focus:ring-4 focus:outline-none focus:ring-red-300 rounded-lg border border-red-200 text-sm font-medium px-5 py-2.5 hover:text-red-900 focus:z-10 dark:bg-red-700 dark:text-white dark:border-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-600"
+            >
+              Delete
+            </button>
+          </div>
         </div>
       </div>
     </div>
