fix flex content

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,5 +1,5 @@
 <div class="my-8">
-  <ul class="flex flex-row flex-wrap">
+  <ul class="flex flex-row justify-center md:justify-start flex-wrap">
     <li>
       <button
         type="button"
