--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -69,7 +69,20 @@
               class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               id="title"
               [(ngModel)]="selectedCard.name"
+              required
+              #title="ngModel"
             />
+          </div>
+          <div
+            *ngIf="title.invalid && (title.dirty || title.touched)"
+            class="mx-20"
+          >
+            <div
+              *ngIf="title.errors?.['required']"
+              class="text-red-500 text-sm"
+            >
+              Title is required.
+            </div>
           </div>
           <div class="flex my-2">
             <label for="description" class="mx-2 w-16">Details</label>
@@ -77,7 +90,22 @@
               class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               id="description"
               [(ngModel)]="selectedCard.desc"
+              required
+              #description="ngModel"
             ></textarea>
+          </div>
+          <div
+            *ngIf="
+              description.invalid && (description.dirty || description.touched)
+            "
+            class="mx-20"
+          >
+            <div
+              *ngIf="description.errors?.['required']"
+              class="text-red-500 text-sm"
+            >
+              Details are required.
+            </div>
           </div>
         </div>
         <!-- Modal footer -->
@@ -88,7 +116,8 @@
             <button
               type="button"
               (click)="saveCard()"
-              class="mx-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+              [disabled]="validate()"
+              class="mx-2 text-white bg-blue-700 disabled:bg-gray-500 disabled:cursor-not-allowed disabled:hover:bg-gray-500 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
             >
               {{ selectedCard._id ? "Update" : "Save" }}
             </button>
