--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -19,7 +19,7 @@
         (click)="onCardClick(card)"
         class="m-6 flex flex-col justify-between cursor-pointer h-52 w-52 max-w-sm p-5 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
-        <div>
+        <div class="text-ellipsis overflow-hidden">
           <h5
             class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
           >
@@ -87,7 +87,7 @@
           <div class="flex my-2">
             <label for="description" class="mx-2 w-16">Details</label>
             <textarea
-              class="bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="h-52 bg-gray-50 border mx-2 w-full border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               id="description"
               [(ngModel)]="selectedCard.desc"
               required
